[gd_scene load_steps=12 format=3 uid="uid://v7uwk6hlpg4m"]

[ext_resource type="Script" path="res://player/player.gd" id="1_rlis3"]
[ext_resource type="Script" path="res://player/player_state_machine.gd" id="2_hyt60"]
[ext_resource type="Script" path="res://player/states/motion/on_ground/idle.gd" id="3_pggd5"]
[ext_resource type="Script" path="res://player/states/motion/jump.gd" id="4_y4bg5"]
[ext_resource type="Script" path="res://player/states/motion/on_ground/move.gd" id="5_fdgac"]
[ext_resource type="Script" path="res://player/states/motion/fall.gd" id="5_mbm1r"]
[ext_resource type="Script" path="res://player/states/motion/dash.gd" id="6_1cxpp"]
[ext_resource type="Script" path="res://player/states/motion/wall_slide.gd" id="7_oy1rg"]
[ext_resource type="PackedScene" uid="uid://prh35jb6tjtd" path="res://models/sophia/sophia_skin.tscn" id="7_sjoh1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_icno7"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_4y405"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
floor_constant_speed = true
floor_block_on_wall = false
floor_snap_length = 1.0
script = ExtResource("1_rlis3")

[node name="DebugModel" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_icno7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_4y405")

[node name="DebugRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -1)

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("start_state")]
script = ExtResource("2_hyt60")
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("3_pggd5")

[node name="Jump" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_y4bg5")

[node name="Fall" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_mbm1r")

[node name="Move" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_fdgac")

[node name="WallSlide" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_oy1rg")

[node name="Dash" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_1cxpp")

[node name="Timer" type="Timer" parent="PlayerStateMachine/Dash"]
wait_time = 0.6

[node name="SophiaSkin" parent="." instance=ExtResource("7_sjoh1")]

[connection signal="timeout" from="PlayerStateMachine/Dash/Timer" to="PlayerStateMachine/Dash" method="_on_timer_timeout"]
